--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     </tr>
     <tr>
       <td>
-        <button class="app-button app-button-digit" type="button" onclick="calculator.calculator.printDigit('7')">7
+        <button class="app-button app-button-digit" type="button" onclick="calculator.printDigit('7')">7
         </button>
       </td>
       <td>
