Skred(test_task)

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,12 @@
 <header>
   <ul class="app-control-bar">
     <li>
-      <button class="app-button-long app-button-digit" data-test="btn-theme" type="button"
-              onclick="calculator.toggleTheme()">
+       <button class="app-button-long app-button-digit" data-test="btn-copy" type="button" onclick="calculator.square()">
+        ^2
+      </button>
+    </li>
+    <li>
+      <button class="app-button-long app-button-digit" data-test="btn-theme" type="button"onclick="calculator.toggleTheme()">
         theme
       </button>
     </li>
